[package]
name = "webapp"
version = "0.1.0"
edition = "2021"
default-run = "svr"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.2"
actix-web = "4.3.1"
awc = "3.1.1"
dotenv = "0.15.0"
serde = {version = "1.0.152", features = ["derive"]}
serde_json = "1.0.94"
tera = "1.17.1"

[[bin]]
name = "svr"